objects/ASI_MFM_Rental_Request_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Rental Request Lines</relationshipLabel>
        <relationshipName>Rental_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_Per_Month__c</fullName>
        <label>Amount Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Apply_CIP_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply CIP Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAPEX_Budget__c</fullName>
        <label>CAPEX Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CIP_Amount__c</fullName>
        <label>CIP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Contract__c</fullName>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <formula>ASI_MFM_Rental_Request__r.ASI_MFM_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ExpenseType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Type</label>
        <referenceTo>ASI_MFM_Expense_Control_Form__c</referenceTo>
        <relationshipLabel>Rental Request Lines</relationshipLabel>
        <relationshipName>Rental_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expense_Type_Text__c</fullName>
        <formula>ASI_MFM_ExpenseType__r.ASI_MFM_ExpenseType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Market_benchmark_RMB__c</fullName>
        <label>Market benchmark  (RMB/㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Market_investigationProposalRMB__c</fullName>
        <label>Market Investigation Proposal (RMB/㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_OPEX_Budget__c</fullName>
        <label>OPEX Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Period_From__c</fullName>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Period_To__c</fullName>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Renovation_Item__c</fullName>
        <label>Renovation Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Renovation_Space__c</fullName>
        <label>Renovation  Space(㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Rental_Request_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rental Request Line</label>
        <referenceTo>ASI_MFM_Rental_Request_Line__c</referenceTo>
        <relationshipLabel>Rental Request Lines</relationshipLabel>
        <relationshipName>Rental_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Rental_Request__c</fullName>
        <label>Rental Request</label>
        <referenceTo>ASI_MFM_Rental_Request__c</referenceTo>
        <relationshipLabel>Rental Request Lines</relationshipLabel>
        <relationshipName>Rental_Request_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <formula>Text( ASI_MFM_Rental_Request__r.ASI_MFM_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Rental Request Lines</relationshipLabel>
        <relationshipName>Rental_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Amount_Without_Tax__c</fullName>
        <formula>( ASI_MFM_Total_Amount__c/(1+ ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rental Request Line</label>
    <nameField>
        <displayFormat>RI-{00000000}</displayFormat>
        <label>Rental Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Request Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Rental_Contract_Line</fullName>
        <active>true</active>
        <label>CN Rental Contract Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Rental_Item</fullName>
        <active>true</active>
        <label>CN Rental Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>